# wiki

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  typedoc.json  wiki.spec
.cursor/rules/: config-load-errors.mdc
.github/ISSUE_TEMPLATE/: integration-template.yml
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml  release.yaml  release.yml
docs/: .mdformat.toml  build.py  conf.py  index.html  requirements-docs.txt  wiki.json  wiki.yaml  wiki.yml
docs/adr/: 0001-context-centric-configuration.md  0002-userland-printing.md  0004-unified-check-and-wikiconfig.md  0005-streamlined-cli-architecture.md  001-library-first-api.md
docs/assets/: wikipedia.css  wikipedia.js
docs/layouts/: default.html  default.html.j2  redirect.html  shell.html  wikipedia.html  wikipedia.html.j2
docs/schemas/: audit_report.schema.json  build_options.schema.json  build_result.schema.json  cli_build.schema.json  cli_check.schema.json  cli_export.schema.json  cli_fmt.schema.json  cli_init.schema.json  cli_link.schema.json  cli_lint.schema.json  cli_main.schema.json  cli_query.schema.json  cli_render.schema.json  cli_serve.schema.json  cli_upgrade.schema.json  config.schema.json  export_result.schema.json  fmt_report.schema.json  init_options.schema.json  issue.schema.json  link_report.schema.json  render_report.schema.json  scaffold_result.schema.json  tech-article.json
docs/wiki/: Agent_Memory_Filesystems.md  Andrej_Karpathy.md  Authoring_Guide.md  Braincheck.md  CLI_build.md  CLI_check.md  CLI_export.md  CLI_init.md  CLI_query.md  CLI_render.md  CLI_serve.md  CLI_upgrade.md  CLI_view.md  CSS.md  CSV.md  Content_Negotiation.md  Dataview_Integration.md  Declarative_Knowledge.md  Deploying_to_GitHub_Pages.md  Design_Philosophies.md  Farza_Majeed.md  Farzapedia.md  Getting_Started.md  Global_Options.md  Graph_Cache.md  HTML.md  HTML_Template.md  Hello_World.md  JSON.md  JSON_LD.md  JavaScript.md  Jeff_Kazzee.md  Loam.md  (+111 more)
npm/: python.js  setup.js  test-cli-drift.js  test-setup-argv.js  test-wiki-api.js  uninstall.js
scripts/: build-standalone.py  export_cli_manifest.py  export_cli_shapes.py  export_schemas.py  pyinstaller_entry.py  release.py  set_version.py
skills/: README.md
tests/: layout_helpers.py  test_audit.py  test_audit_reports.py  test_build.py  test_checking.py  test_cli.py  test_config.py  test_docs_build.py  test_document.py  test_fmt.py  test_format.py  test_format_choice.py  test_frontmatter_schema.py  test_graph.py  test_graph_cache.py  test_headings.py  test_infer.py  test_init_scaffold.py  test_jqfilter.py  test_layout_context.py  test_layout_contract.py  test_layout_template.py  test_layout_tokens.py  test_library_ops.py  test_link_fix.py  test_link_suggest.py  test_mcp.py  test_parser.py  test_paths.py  test_rdf.py  test_reasoning.py  test_render.py  test_serve.py  test_session.py  test_site.py  test_sources.py  test_sparql_service.py  test_upgrade.py  test_vault_links.py  test_version.py  (+2 more)
wiki/: custom-schemas-and-shapes.md  farzapedia.md  karpathy-llm-wiki.md  personal-knowledge-management.md  sparql-guide.md  wiki-cli.md  wiki-schema.md
(+189 files in other folders)
