[project]
name = "wazootech-wiki"
version = "0.1.12"
description = "Clean, pure, idiomatic Python CLI for managing a semantic LLM wiki"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",
    "pyyaml>=6.0.1",
    "owlrl>=6.0.2",
    "beautifulsoup4>=4.14.3",
    "markdown-it-py>=3.0.0",
    "pygments>=2.17.0",
    "rich>=13.7.0",
    "mdformat>=0.7.19",
    "mdformat-frontmatter>=2.0.1",
    "mdformat-gfm>=0.3.5",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
]

[project.scripts]
wiki = "wiki.__main__:main"

[project.entry-points."mdformat.parser_extension"]
wikilink = "wiki.mdformat_wikilink"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["wiki*"]}}
package-data = {"wiki" = ["templates/*"]}

[tool.uv]
package = true
