[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wazootech-wiki"
version = "0.1.19"
description = "Clean, pure, idiomatic Python CLI for managing a semantic LLM wiki"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",
    "pyyaml>=6.0.1",
    "owlrl>=6.0.2",
    "beautifulsoup4>=4.14.3",
    "markdown-it-py>=3.0.0",
    "pygments>=2.17.0",
    "rich>=13.7.0",
    "mdformat>=0.7.19",
    "mdformat-front-matters>=2.0.0",
    "mdformat-gfm>=1.0.0,<2",
    "mdformat-toc>=0.5.0",
    "mdformat-footnote>=0.1.3",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "jsonschema>=4.23",
    "ruamel.yaml>=0.18.0",
]

[project.scripts]
wiki = "wiki.__main__:main"

[project.entry-points."mdformat.parser_extension"]
wikilink = "wiki.mdformat_wikilink"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["wiki*"]}}
package-data = {"wiki" = ["templates/*", "templates/schemas/*", "layouts/*", "assets/*"]}

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
standalone = ["pyinstaller>=6.0"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # defer line-wrap; existing codebase exceeds 88 cols widely
]
